--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/cdk": "^7.3.7",
     "@angular/forms": "~7.2.0",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "bootstrap": "^3.4.1",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
+    "highcharts": "^9.1.2",
     "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
